[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.32.0"
failure = "0.1.6"
glob = "0.3.0"
regex = "1.3.4"
serde_json = "1.0.45"
serde = "1.0.104"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.2"
tempfile = "3.1.0"
walkdir = "2.3.1"
